-Modal cross not showing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -325,6 +325,7 @@ float:left;
     color: white;
     user-select: none;
     transition: color 0.5s ease;
+    z-index: 8;
 }
 
 #modalcross:hover {
